Add Auto/Dark/Light modes toggle, Add accent color, Fix file format

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,157 +6,178 @@ repo_url: https://github.com/yxrei/two-torial/
 repo_name: GitHub
 
 nav:
-    - Home: index.md
-    - Games:
-        - BEMANI:
-            - 'IIDX':
-                - 'IIDX 9th style':
-                    - 'First Time Setup': 'games/iidx9/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx9/problems.md'
-                - 'IIDX 10th style':
-                    - 'First Time Setup': 'games/iidx10/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx10/problems.md'
-                - 'IIDX 11 IIDX RED':
-                    - 'First Time Setup': 'games/iidx11/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx11/problems.md'
-                - 'IIDX 12 HAPPY SKY':
-                    - 'First Time Setup': 'games/iidx12/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx12/problems.md'
-                - 'IIDX 13 DistorteD':
-                    - 'First Time Setup': 'games/iidx13/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx13/problems.md'
-                - 'IIDX 14 GOLD':
-                    - 'First Time Setup': 'games/iidx14/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx14/problems.md'
-                - 'IIDX 24 SINOBUZ':
-                    - 'First Time Setup': 'games/iidx24/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx24/problems.md'
-                - 'IIDX 25 CANNON BALLERS':
-                    - 'First Time Setup': 'games/iidx25/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx25/problems.md'
-                - 'IIDX 26 Rootage':
-                    - 'First Time Setup': 'games/iidx26/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx26/problems.md'
-                - 'IIDX 27 HEROIC VERSE':
-                    - 'First Time Setup': 'games/iidx27/setup.md'
-                    - 'Common Problems/Tips': 'games/iidx27/problems.md'
-                    - 'Lightning Mode Specifics': 'games/iidx27/lightning.md'
-                - 'IIDX 30 RESIDENT':
-                    - 'Game Setup': 'games/iidx30/setup.md'
-                    - 'Extra Information': 'games/iidx30/extras.md'
-                    - 'Troubleshooting': 'games/iidx30/troubleshooting.md'
-                - 'IIDX 31 EPOLIS':
-                    - 'Game Setup': 'games/iidx31/setup.md'
-                    - 'Extra Information': 'games/iidx31/extras.md'
-                    - 'Troubleshooting': 'games/iidx31/troubleshooting.md'
-            - 'SDVX':
-                - 'SDVX IV HEAVENLY HAVEN':
-                    - 'First Time Setup': 'games/sdvx4/setup.md'
-                    - 'Common Problems/Tips': 'games/sdvx4/problems.md'
-                - 'SDVX VIVID WAVE':
-                    - 'First Time Setup': 'games/sdvx5/setup.md'
-                    - 'Common Problems/Tips': 'games/sdvx5/problems.md'
-                - 'SDVX EXCEED GEAR':
-                    - 'Game Setup': 'games/sdvx6/setup.md'
-                    - 'Extra Information': 'games/sdvx6/extras.md'
-                    - 'Troubleshooting': 'games/sdvx6/troubleshooting.md'
-            - 'Pop&apos;n':
-                - 'Pop&apos;n Usaneko':
-                    - 'First Time Setup': 'games/popnusaneko/setup.md'
-                    - 'Common Problems/Tips': 'games/popnusaneko/problems.md'
-                - 'Pop&apos;n Peace':
-                    - 'First Time Setup': 'games/popnpeace/setup.md'
-                    - 'Common Problems/Tips': 'games/popnpeace/problems.md'
-                - 'HELLO Pop&apos;n':
-                    - 'First Time Setup': 'games/hellopopn/setup.md'
-                    - 'Common Problems/Tips': 'games/hellopopn/problems.md'
-            - 'DDR':
-                - 'DDR Ace':
-                    - 'First Time Setup': 'games/ddrace/setup.md'
-                    - 'Common Problems/Tips': 'games/ddrace/problems.md'
-            - 'Jubeat':
-                - 'Jubeat Clan':
-                    - 'First Time Setup': 'games/jubeatclan/setup.md'
-                    - 'Common Problems/Tips': 'games/jubeatclan/problems.md'
-            - 'GITADORA':
-                - 'GITADORA Matixx':
-                    - 'First Time Setup': 'games/gitamatixx/setup.md'
-                    - 'Common Problems/Tips': 'games/gitamatixx/problems.md'
-                - 'GITADORA EXCHAIN':
-                    - 'First Time Setup': 'games/exchain/setup.md'
-                    - 'Common Problems/Tips': 'games/exchain/problems.md'
-            - 'Reflec Beat':
-                - 'Reflec Beat: Reflesia':
-                    - 'First Time Setup': 'games/reflesia/setup.md'
-                    - 'Common Problems/Tips': 'games/reflesia/problems.md'
-            - 'NOSTALGIA':
-                - 'Nostalgia FORTE':
-                    - 'First Time Setup': 'games/nostforte/setup.md'
-                    - 'Common Problems/Tips': 'games/nostforte/problems.md'
-                - 'Nostalgia Op.2':
-                    - 'First Time Setup': 'games/nostop2/setup.md'
-                    - 'Common Problems/Tips': 'games/nostop2/problems.md'
-            - 'BeatStream アニムトライヴ':
-                - 'First Time Setup': 'games/beatstreamfinal/setup.md'
-                - 'Common Problems/Tips': 'games/beatstreamfinal/problems.md'
-            - 'MÚSECA 1+1/2':
-                - 'First Time Setup': 'games/musecafinal/setup.md'
-                - 'Common Problems/Tips': 'games/musecafinal/problems.md'
-        - SEGA:
-            - 'CHUNITHM':
-                - 'SUN PLUS':
-                    - 'First Time Setup': 'games/chunithmsunplus/setup.md'
-                    - 'Controllers': 'games/chunithmsunplus/controllers.md'
-                    - 'Networks': 'games/chunithmsunplus/networks.md'
-                    - 'Common Problems/Tips': 'games/chunithmsunplus/problems.md'
-        - NAMCO:
-            - 'Taiko no Tatsujin':
-                - 'Nijiiro':
-                    - 'First Time Setup': 'games/taikonijiiro/setup.md'
-                    - 'Controllers': 'games/taikonijiiro/controllers.md'
-                    - 'Networks': 'games/taikonijiiro/networks.md'
-                    - 'Common Problems/Tips': 'games/taikonijiiro/problems.md'
-    - Error Codes: errorcodes.md
-    - Game Patching:
-        - 'Spice2x Patching': 'extras/patchsp2x.md'
-        - 'Website Patching': 'extras/patchweb.md'
-        - 'Manual Hex Editing': 'extras/hexguide.md'
-    - Extras:
-        - 'How to setup Asphyxia CORE': 'extras/asphyxia.md'
-        - 'Notes on the Most Common ASCs and Vendors': 'extras/ascs.md'
-        - 'Arcade Parts List and Documentation': 'extras/parts.md'
-        - 'List of Touchscreen Monitors and their Polling Rates': 'extras/pollingrates.md'
-        - 'What is WASAPI and ASIO?': 'extras/audio.md'
-        - 'Exclusive Audio Workarounds': 'extras/streamaudio.md'
-    - External Resources: externalresources.md
+  - Home: index.md
+  - Games:
+      - BEMANI:
+          - "IIDX":
+              - "IIDX 9th style":
+                  - "First Time Setup": "games/iidx9/setup.md"
+                  - "Common Problems/Tips": "games/iidx9/problems.md"
+              - "IIDX 10th style":
+                  - "First Time Setup": "games/iidx10/setup.md"
+                  - "Common Problems/Tips": "games/iidx10/problems.md"
+              - "IIDX 11 IIDX RED":
+                  - "First Time Setup": "games/iidx11/setup.md"
+                  - "Common Problems/Tips": "games/iidx11/problems.md"
+              - "IIDX 12 HAPPY SKY":
+                  - "First Time Setup": "games/iidx12/setup.md"
+                  - "Common Problems/Tips": "games/iidx12/problems.md"
+              - "IIDX 13 DistorteD":
+                  - "First Time Setup": "games/iidx13/setup.md"
+                  - "Common Problems/Tips": "games/iidx13/problems.md"
+              - "IIDX 14 GOLD":
+                  - "First Time Setup": "games/iidx14/setup.md"
+                  - "Common Problems/Tips": "games/iidx14/problems.md"
+              - "IIDX 24 SINOBUZ":
+                  - "First Time Setup": "games/iidx24/setup.md"
+                  - "Common Problems/Tips": "games/iidx24/problems.md"
+              - "IIDX 25 CANNON BALLERS":
+                  - "First Time Setup": "games/iidx25/setup.md"
+                  - "Common Problems/Tips": "games/iidx25/problems.md"
+              - "IIDX 26 Rootage":
+                  - "First Time Setup": "games/iidx26/setup.md"
+                  - "Common Problems/Tips": "games/iidx26/problems.md"
+              - "IIDX 27 HEROIC VERSE":
+                  - "First Time Setup": "games/iidx27/setup.md"
+                  - "Common Problems/Tips": "games/iidx27/problems.md"
+                  - "Lightning Mode Specifics": "games/iidx27/lightning.md"
+              - "IIDX 30 RESIDENT":
+                  - "Game Setup": "games/iidx30/setup.md"
+                  - "Extra Information": "games/iidx30/extras.md"
+                  - "Troubleshooting": "games/iidx30/troubleshooting.md"
+              - "IIDX 31 EPOLIS":
+                  - "Game Setup": "games/iidx31/setup.md"
+                  - "Extra Information": "games/iidx31/extras.md"
+                  - "Troubleshooting": "games/iidx31/troubleshooting.md"
+          - "SDVX":
+              - "SDVX IV HEAVENLY HAVEN":
+                  - "First Time Setup": "games/sdvx4/setup.md"
+                  - "Common Problems/Tips": "games/sdvx4/problems.md"
+              - "SDVX VIVID WAVE":
+                  - "First Time Setup": "games/sdvx5/setup.md"
+                  - "Common Problems/Tips": "games/sdvx5/problems.md"
+              - "SDVX EXCEED GEAR":
+                  - "Game Setup": "games/sdvx6/setup.md"
+                  - "Extra Information": "games/sdvx6/extras.md"
+                  - "Troubleshooting": "games/sdvx6/troubleshooting.md"
+          - "Pop&apos;n":
+              - "Pop&apos;n Usaneko":
+                  - "First Time Setup": "games/popnusaneko/setup.md"
+                  - "Common Problems/Tips": "games/popnusaneko/problems.md"
+              - "Pop&apos;n Peace":
+                  - "First Time Setup": "games/popnpeace/setup.md"
+                  - "Common Problems/Tips": "games/popnpeace/problems.md"
+              - "HELLO Pop&apos;n":
+                  - "First Time Setup": "games/hellopopn/setup.md"
+                  - "Common Problems/Tips": "games/hellopopn/problems.md"
+          - "DDR":
+              - "DDR Ace":
+                  - "First Time Setup": "games/ddrace/setup.md"
+                  - "Common Problems/Tips": "games/ddrace/problems.md"
+          - "Jubeat":
+              - "Jubeat Clan":
+                  - "First Time Setup": "games/jubeatclan/setup.md"
+                  - "Common Problems/Tips": "games/jubeatclan/problems.md"
+          - "GITADORA":
+              - "GITADORA Matixx":
+                  - "First Time Setup": "games/gitamatixx/setup.md"
+                  - "Common Problems/Tips": "games/gitamatixx/problems.md"
+              - "GITADORA EXCHAIN":
+                  - "First Time Setup": "games/exchain/setup.md"
+                  - "Common Problems/Tips": "games/exchain/problems.md"
+          - "Reflec Beat":
+              - "Reflec Beat: Reflesia":
+                  - "First Time Setup": "games/reflesia/setup.md"
+                  - "Common Problems/Tips": "games/reflesia/problems.md"
+          - "NOSTALGIA":
+              - "Nostalgia FORTE":
+                  - "First Time Setup": "games/nostforte/setup.md"
+                  - "Common Problems/Tips": "games/nostforte/problems.md"
+              - "Nostalgia Op.2":
+                  - "First Time Setup": "games/nostop2/setup.md"
+                  - "Common Problems/Tips": "games/nostop2/problems.md"
+          - "BeatStream アニムトライヴ":
+              - "First Time Setup": "games/beatstreamfinal/setup.md"
+              - "Common Problems/Tips": "games/beatstreamfinal/problems.md"
+          - "MÚSECA 1+1/2":
+              - "First Time Setup": "games/musecafinal/setup.md"
+              - "Common Problems/Tips": "games/musecafinal/problems.md"
+      - SEGA:
+          - "CHUNITHM":
+              - "SUN PLUS":
+                  - "First Time Setup": "games/chunithmsunplus/setup.md"
+                  - "Controllers": "games/chunithmsunplus/controllers.md"
+                  - "Networks": "games/chunithmsunplus/networks.md"
+                  - "Common Problems/Tips": "games/chunithmsunplus/problems.md"
+      - NAMCO:
+          - "Taiko no Tatsujin":
+              - "Nijiiro":
+                  - "First Time Setup": "games/taikonijiiro/setup.md"
+                  - "Controllers": "games/taikonijiiro/controllers.md"
+                  - "Networks": "games/taikonijiiro/networks.md"
+                  - "Common Problems/Tips": "games/taikonijiiro/problems.md"
+  - Error Codes: errorcodes.md
+  - Game Patching:
+      - "Spice2x Patching": "extras/patchsp2x.md"
+      - "Website Patching": "extras/patchweb.md"
+      - "Manual Hex Editing": "extras/hexguide.md"
+  - Extras:
+      - "How to setup Asphyxia CORE": "extras/asphyxia.md"
+      - "Notes on the Most Common ASCs and Vendors": "extras/ascs.md"
+      - "Arcade Parts List and Documentation": "extras/parts.md"
+      - "List of Touchscreen Monitors and their Polling Rates": "extras/pollingrates.md"
+      - "What is WASAPI and ASIO?": "extras/audio.md"
+      - "Exclusive Audio Workarounds": "extras/streamaudio.md"
+  - External Resources: externalresources.md
 
 theme:
-    name: material
-    logo: img/logo/website-logo.svg
-    favicon: img/favicon.ico
-    navigation_depth: 3
-    palette:
-        primary: deep purple
-        scheme: slate
+  name: material
+  logo: img/logo/website-logo.svg
+  favicon: img/favicon.ico
+  navigation_depth: 3
+  palette:
+    # Toggle for auto mode
+    - media: "(prefers-color-scheme)"
+      primary: deep purple
+      accent: deep purple
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+    # Toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: deep purple
+      accent: deep purple
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: deep purple
+      accent: deep purple
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 
 markdown_extensions:
-    - admonition
-    - pymdownx.details
-    - pymdownx.highlight:
-        anchor_linenums: true
-        line_spans: __span
-        pygments_lang_class: true
-    - pymdownx.inlinehilite
-    - pymdownx.snippets
-    - pymdownx.superfences
-    - pymdownx.keys
-    - pymdownx.critic
-    - pymdownx.caret
-    - pymdownx.keys
-    - pymdownx.mark
-    - pymdownx.tilde
-    - attr_list
-    - md_in_html
+  - admonition
+  - pymdownx.details
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.keys
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+  - attr_list
+  - md_in_html
 
 plugins:
   - search
