TWO-TORIAL patcher, External -> Other Resources - Renamed "External Resources" to "Other Resources" - Renamed "externalresources.md" to "resources.md" - Added TWO-TORIAL sp2x patcher to "resources.md" - Fixed every found instance where resources are linked to

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,7 +126,7 @@ nav:
       - "List of Touchscreen Monitors and their Polling Rates": "extras/pollingrates.md"
       - "What is WASAPI & ASIO?": "extras/audio.md"
       - "Exclusive Audio Workarounds": "extras/streamaudio.md"
-  - External Resources: externalresources.md
+  - Other Resources: resources.md
 
 theme:
   name: material
