Update github repo links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: two-torial.xyz
 copyright: two-torial Team
 site_description: Arcade Games Troubleshooting Guide
 site_author: two-torial Team
-repo_url: https://github.com/yxrei/two-torial/
+repo_url: https://github.com/two-torial/two-torial/
 repo_name: GitHub
 
 nav:
