Revamp Chunithm Sun Plus guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,6 +179,9 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.tilde
   - attr_list
+  - pymdownx.emoji:
+        emoji_index: !!python/name:material.extensions.emoji.twemoji
+        emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - md_in_html
 
 plugins:
