--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,17 +6,18 @@ on:
       - main
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Prep Python
-        uses: actions/setup-python@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      - name: Install pip deps
-        run: |
-          python -m pip install --user -r requirements.txt
+          python-version: '3.x'
+      - name: Install pip dependencies
+        run: pip install --user -r requirements.txt
       - name: Build and deploy site
         run: mkdocs gh-deploy --force
