Fix fetch depth

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-detph: '0'
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
