--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-detph: '0'
+          fetch-depth: '0'
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
