--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,6 +152,7 @@ nav:
       - "List of Touchscreen Monitors and their Polling Rates": "extras/pollingrates.md"
       - "What is WASAPI & ASIO?": "extras/audio.md"
       - "Exclusive Audio Workarounds": "extras/streamaudio.md"
+      - "Setting Up SoftEther VPN for Cabinet-to-Cabinet Play": "extras/softether.md"
   - Other Resources: resources.md
 
 theme:
