iidx11: revamp setup & troubleshooting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
                   - "Common Problems/Tips": "games/iidx10/troubleshooting.md"
               - "IIDX 11 IIDX RED":
                   - "First Time Setup": "games/iidx11/setup.md"
-                  - "Common Problems/Tips": "games/iidx11/problems.md"
+                  - "Troubleshooting": "games/iidx11/troubleshooting.md"
               - "IIDX 12 HAPPY SKY":
                   - "First Time Setup": "games/iidx12/setup.md"
                   - "Common Problems/Tips": "games/iidx12/problems.md"
