iidx10: fix mkdocs.yml entry & formatting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ nav:
                   - "Troubleshooting": "games/iidx9/troubleshooting.md"
               - "IIDX 10th style":
                   - "First Time Setup": "games/iidx10/setup.md"
-                  - "Common Problems/Tips": "games/iidx10/troubleshooting.md"
+                  - "Troubleshooting": "games/iidx10/troubleshooting.md"
               - "IIDX 11 IIDX RED":
                   - "First Time Setup": "games/iidx11/setup.md"
                   - "Troubleshooting": "games/iidx11/troubleshooting.md"
