iidx12: revamp setup & troubleshooting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
                   - "Troubleshooting": "games/iidx11/troubleshooting.md"
               - "IIDX 12 HAPPY SKY":
                   - "First Time Setup": "games/iidx12/setup.md"
-                  - "Common Problems/Tips": "games/iidx12/problems.md"
+                  - "Troubleshooting": "games/iidx12/troubleshooting.md"
               - "IIDX 13 DistorteD":
                   - "First Time Setup": "games/iidx13/setup.md"
                   - "Common Problems/Tips": "games/iidx13/problems.md"
