iidx13: setup & troubleshooting revamp

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
                   - "Troubleshooting": "games/iidx12/troubleshooting.md"
               - "IIDX 13 DistorteD":
                   - "First Time Setup": "games/iidx13/setup.md"
-                  - "Common Problems/Tips": "games/iidx13/problems.md"
+                  - "Troubleshooting": "games/iidx13/troubleshooting.md"
               - "IIDX 14 GOLD":
                   - "First Time Setup": "games/iidx14/setup.md"
                   - "Common Problems/Tips": "games/iidx14/problems.md"
