iidx14: revamp setup & troubleshooting (shoot me instead)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
                   - "Troubleshooting": "games/iidx13/troubleshooting.md"
               - "IIDX 14 GOLD":
                   - "First Time Setup": "games/iidx14/setup.md"
-                  - "Common Problems/Tips": "games/iidx14/problems.md"
+                  - "Troubleshooting": "games/iidx14/troubleshooting.md"
               - "IIDX 24 SINOBUZ":
                   - "First Time Setup": "games/iidx24/setup.md"
                   - "Common Problems/Tips": "games/iidx24/problems.md"
